--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Oscar Alejandro Moncada Garcia | CSE 121B | BYU-Idaho</title>
 </head>
 <body>
-    <h1></h1>
+    <h1>Oscar Alejandro Moncada Garcia | CSE 121B | BYU-Idaho</h1>
     <h2>Valdivia, Chile</h2>
     <hr>
 </body>
