--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oscar Alejandro Moncada Garcia | CSE 121B | BYU-Idaho</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>Oscar Moncada | CSE 121B | BYU-Idaho</title>
 </head>
 <body>
-    <h1>Oscar Alejandro Moncada Garcia | CSE 121B | BYU-Idaho</h1>
-    <h2>Valdivia, Chile</h2>
-    <hr>
+  <h1>Oscar Moncada | CSE 121B | BYU-Idaho</h1>
+  <h2>Valdivia, Chile</h2>
+  <hr>
 </body>
 </html>
